# raglite-sqlite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: README.md  run_demo.ps1  run_demo.sh
demo/mini_corpus/: article_embeddings.md  article_local_rag.md  faq_storage.txt  faq_troubleshooting.md  howto_create_dashboard.md  product_datasheet_console.md  product_release_notes.md
raglite_sqlite/: __init__.py  api.py  chunking.py  cli.py  db.py  rerank.py  schema.sql  search.py  server.py  typing.py  utils.py
raglite_sqlite/adapters/: __init__.py  langchain.py  llamaindex.py
raglite_sqlite/embeddings/: __init__.py  base.py  hash_backend.py  openai_backend.py  sentence_transformers_backend.py
raglite_sqlite/parsers/: __init__.py  base.py  csv.py  docx.py  html.py  image.py  json.py  md.py  pdf.py  pptx.py  txt.py
scripts/: bench_basic.py  eval_small.py
src/demo/: run_demo.ps1  run_demo.sh
src/demo/mini_corpus/: doc1.md  doc2.md  doc3.md  doc4.md  doc5.md  doc6.md  faq.txt  guide.html
src/examples/: langchain_integration.py  llamaindex_integration.py  python_api_minimal.py
src/raglite/: __init__.py  api.py  chunk.py  cli.py  config.py  db.py  embed.py  ingest.py  schema.sql  search.py
src/raglite/data/: eval_set.jsonl
src/raglite/data/mini_corpus/: article_backup_strategy.md  faq_installation.md  howto_schedule_backups.txt  howto_tune_alpha.md  product_datasheet_sync.md
src/raglite/server/: __init__.py  app.py
src/raglite/vector/: __init__.py  backend.py  python_fallback.py  sqlite_ext.py  types.py
src/scripts/: bench_basic.py  eval_beir.py  load_test.sh
tests/: conftest.py  test_chunk.py  test_cli.py  test_cli_self_test.py  test_e2e_demo.py  test_embed.py  test_ingest_and_search.py  test_parsers.py  test_rerank.py  test_scripts_tiny.py  test_search_utils.py  test_server.py  test_vector_fallback.py
tests/data/: sample.csv  sample.html  sample.md  sample.txt
