[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglite"
version = "0.2.0"
description = "Local-first RAG toolkit backed by a single SQLite database"
readme = "README.md"
authors = [{ name = "RagLite Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "sqlite",
  "search",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.9.0",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.0",
  "pypdf>=4.0.0",
  "sentence-transformers>=2.5.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
]
rerank = [
  "sentence-transformers>=2.5.0",
]
dev = [
  "build>=1.2.1",
  "pytest>=8.1.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.8.0",
  "ruff>=0.4.0",
  "black>=24.4.0",
  "isort>=5.13.2",
  "pre-commit>=3.6.0",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/mmprotest/raglite-sqlite"
Repository = "https://github.com/mmprotest/raglite-sqlite"

[project.scripts]
raglite = "raglite.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
raglite = ["schema.sql", "data/eval_set.jsonl", "data/mini_corpus/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["raglite"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]
